# polytrader

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deploy/: README.md  install.sh  polytrader-dashboard.service  polytrader-scanner.service  polytrader-vacuum.service  polytrader-vacuum.timer  polytrader.env.example  polytrader.logrotate
docs/superpowers/plans/: 2026-06-29-paper-trading-lab.md
docs/superpowers/specs/: 2026-06-29-paper-trading-lab-design.md
specs/001-core-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-framework/checklists/: requirements.md
src/polytrader/: basket.py  basket_scanner.py  client.py  config.py  dashboard.py  engine.py  i18n.py  risk.py  store.py
tests/integration/: test_circuit_breaker.py  test_complementary_arb_tick.py  test_dashboard_smoke.py  test_dry_run_tick.py  test_engine_isolation.py  test_live_tick.py  test_paper_runner.py
tests/unit/: test_basket_scanner.py  test_basket_store.py  test_client.py  test_complementary_arb.py  test_config.py  test_controls.py  test_dashboard_helpers.py  test_follow.py  test_i18n.py  test_market_making.py  test_mean_reversion.py  test_momentum.py  test_no_secrets.py  test_paper_broker.py  test_paper_fills.py  test_paper_store.py  test_replay.py  test_risk.py  test_store.py  test_strategy.py
(+14 files in other folders)
