[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytrader"
version = "0.1.0"
description = "Automated trading framework for Polymarket (single operator, real funds)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "py-clob-client",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
polytrader-engine = "polytrader.engine:main"
polytrader-scanner = "polytrader.basket_scanner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polytrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
